[tool.poetry]
name = "alias"
version = "0.1.0"
description = ""
authors = ["Maksim.Kozeev <maksim.kozeev@x5.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.30"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
TgCrypto = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
